fixe some css rules and linear gradient on safari

--- a/packages/rocketchat_theme/client/imports/general/base.css
+++ b/packages/rocketchat_theme/client/imports/general/base.css
@@ -89,7 +89,7 @@ button {
 
 	flex: 1 1 auto;
 
-	height: 100%;
+	height: 1%;
 
 	max-height: 100%;
 
